#ifndef HARDWAREDIALOG_H
#define HARDWAREDIALOG_H

#include <QWidget>

class hardwareDialog : public QWidget
{
    Q_OBJECT
public:
    explicit hardwareDialog(QWidget *parent = nullptr);

signals:

};

#endif // HARDWAREDIALOG_H
